--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,22 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    --white-100: 245 245 247;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    --dark-200: 29 29 31;
+    --dark-100: 16 16 17;
+  }
 }
 
 @layer utilities {
