--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --white-100: 245 245 247;
+    --light-100: 245 245 247;
 
     --dark-200: 29 29 31;
     --dark-100: 16 16 17;
