--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -4,10 +4,11 @@
 
 @layer base {
   :root {
-    --light-100: 245 245 247;
+    --light-100: 255, 255, 255;
+    --light-200: 245 245 247;
 
-    --dark-200: 29 29 31;
     --dark-100: 16 16 17;
+    --dark-200: 29 29 31;
   }
 }
 
