update styling & components

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --light-100: 255, 255, 255;
+    --light-100: 255 255 255;
     --light-200: 245 245 247;
 
     --dark-100: 16 16 17;
