--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -9,6 +9,7 @@
     --light-200: 245 245 247;
     --dark-100: 16 16 17;
     --dark-200: 29 29 31;
+    --dark-300: 40 40 43;
 
     /* Border Width */
     --border-0: 0rem;
