--- a/src/app/styles/searchstax.css
+++ b/src/app/styles/searchstax.css
@@ -32,4 +32,7 @@ html.light .searchstax-facets-pill-label {
   height: auto !important;
   width: auto !important;
   padding: 0.25rem !important;
+  padding-left: 0.75rem !important;
+  padding-right: 0.75rem !important;
+  border: 1px solid rgb(var(--dark-300)) !important;
 }
