update search input style

--- a/src/app/styles/searchstax.css
+++ b/src/app/styles/searchstax.css
@@ -13,7 +13,8 @@
   margin-right: 10px;
 }
 
-.searchstax-spinner-icon {
+.searchstax-spinner-icon,
+.searchstax-search-icon {
   width: 20px;
   height: 20px;
   max-width: 20px;
